--- a/server/user/src/main/resources/application.properties
+++ b/server/user/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port = 0
 spring.application.name = user-ws
 eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
 spring.devtools.restart.enabled = true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+springspring.datasource.password= password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
